# proteus

./: .clang-tidy  CMakeLists.txt  README.md  cppcheck_report.txt
sources/: accessibility.cpp  accessibility.h  address.cpp  address.h  application.cpp  application.h  console_interface.h  data_pool.cpp  data_pool.h  logger.h  main.cpp  options.cpp  options.h  utils.cpp  utils.h  vector4.cpp  vector4.h
sources/test/: mock_console.h  test_app.cpp
